--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.2/jquery.fullPage.min.js"></script>
-  <script src='http://css-tricks.com/examples/BlurredText/js/jquery.lettering.js'></script>
+  <script src='https://css-tricks.com/examples/BlurredText/js/jquery.lettering.js'></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="static/js/song.js"></script>
   <script src="static/js/section2.js"></script>
